# aiohttp-rpc

./: .scrutinizer.yml  LICENSE.txt  Makefile  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: testing.yml
aiohttp_rpc/: __init__.py  client.py  constants.py  decorators.py  errors.py  exceptions.py  middleware.py  middlewares.py  protocol.py  rpc.py  server.py  typedefs.py  utils.py
aiohttp_rpc/client/: __init__.py  base.py  http.py  websocket.py  ws.py
aiohttp_rpc/protocol/: __init__.py  method.py  request.py  response.py
aiohttp_rpc/server/: __init__.py  base.py  http.py  websocket.py  ws.py
tests/: test_adding_methods.py  test_args.py  test_batch.py  test_json_rcp_manager.py  test_middleware.py  test_protocol_for_http.py  test_protocol_for_ws.py  test_websocket.py  test_ws.py  utils.py
