[tool.poetry]
name = "aiohttp-rpc"
version = "1.1.0"
description = ""
authors = ["expert-m <michael@sulyak.info>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tox = "^3.20.1"
pytest-asyncio = "^0.18.3"
pytest-aiohttp = "^1.0.4"
pytest-mock = "^3.8.2"
flake8 = "^4.0.1"
mypy = "^0.961"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
