[tool.poetry]
name = "aiohttp-rpc"
version = "1.3.0"
description = ""
authors = ["expert-m <michael@sulyak.info>"]

[tool.poetry.dependencies]
python = "^3.8.1"
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
tox = "^4.6.3"
pytest-asyncio = "^0.21.0"
pytest-aiohttp = "^1.0.4"
pytest-mock = "^3.11.1"
flake8 = "^6.0.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
