[tool.poetry]
name = "aiohttp-rpc"
version = "1.3.2"
description = ""
authors = ["Michael Sulyak <michael@sulyak.info>"]

[tool.poetry.dependencies]
python = "^3.8.1"
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
tox = "^4.6.3"
pytest-asyncio = "^0.24.0"
pytest-aiohttp = "^1.0.4"
pytest-mock = "^3.11.1"
flake8 = "^7.1.1"
mypy = "^1.1.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
